[tool.poetry]
name = "pennsieve2"
version = "0.1.1"
description = "Pennsieve Python Client"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data science", "datasets"]
authors = ["Patryk Orzechowski <patryk@upenn.edu>"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]



[tool.poetry.dependencies]
black = {version = ">=20.8b1", optional = true}
codecov = {version = ">=2.0.8", optional = true}
pytest = {version = ">=4.4", optional = true}
python = ">=3.8,<4.0"
grpcio = {version = ">=1.50"}
grpcio_tools = {version = ">=1.50"}
tqdm = {version = ">=4.64"}
protobuf = {version= ">=3.12.0"}
requests = {version= ">=2.28.0"}

[tool.poetry.dev-dependencies]
black = {version = ">=20.8b1", optional = true}
codecov = {version = ">=2.0.8", optional = true}
pytest = {version = ">=4.4", optional = true}
python = ">=3.8,<4.0"
grpcio = {version = ">=1.50"}
grpcio_tools = {version = ">=1.50"}
tqdm = {version = ">=4.64"}
protobuf = {version= ">=3.12.0"}
requests = {version= ">=2.28.0"}


[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov"]

[tool.poetry.urls]
homepage = "https://app.pennsieve.io"
documentation = "https://docs.pennsieve.io/docs/uploading-files-programmatically"
repository = "https://github.com/pennsieve/pennsieve-agent-python"
changelog = "https://github.com/pennsieve/pennsieve-agent-python/CHANGELOG.md"


[tool.black]
line-length = 99
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''


[build-system]
requires = [
    "poetry_core>=1.0.0",
    "setuptools",
    "protobuf",
    "grpcio",
    "tqdm", 
    "requests"
]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "src/pennsieve2/_version.py"
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".", "src",
]
