[tool.poetry]
name = "pennsieve"
version = "7.0.1"
description = "Pennsieve Python Client"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data science", "datasets"]
authors = ["Pennsieve Team <support@pennsieve.net>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]



[tool.poetry.dependencies]
python = ">=3.9,<3.13"
grpcio = { version = "^1.51" }
grpcio_tools = { version = "^1.51" }
tqdm = { version = "^4.64" }
protobuf = { version = "^4.21" }
requests = { version = "^2.28" }
pyjwt = { version = "^2.6" }
boto3 = { version = "^1.26" }
pandas = "^2.2.3"
numpy = "1.26.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1" }
blackdoc = "^0.3.8"
isort = "^5.12.0"
codecov = { version = "^2.0.8" }
pytest = { version = "^7.2" }
build = { version = "^0.10" }

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov"]

[tool.poetry.urls]
homepage = "https://app.pennsieve.io"
documentation = "https://docs.pennsieve.io/docs/uploading-files-programmatically"
repository = "https://github.com/pennsieve/pennsieve-agent-python"
changelog = "https://github.com/pennsieve/pennsieve-agent-python/CHANGELOG.md"


[tool.black]
line-length = 99
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''


[build-system]
requires = [
    "poetry_core>=1.0.0",
    "setuptools",
    "protobuf",
    "grpcio",
    "tqdm",
    "requests",
    "pyjwt",
    "boto3"
]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "src/pennsieve/_version.py"
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    ".", "src",
]
