[tool.poetry]
name = "pennsieve"
version = "7.0.4"
description = "Pennsieve Python Client"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data science", "datasets"]
authors = ["Pennsieve Team <support@pennsieve.net>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]



[tool.poetry.dependencies]
python = ">=3.10,<3.15"
grpcio = { version = "^1.71" }
grpcio_tools = { version = "^1.71" }
tqdm = { version = "^4.67" }
protobuf = { version = "^5.26" }
requests = { version = "^2.32" }
pyjwt = { version = "^2.10" }
boto3 = { version = "^1.37" }
pandas = "^2.2.3"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
black = { version = "^25.0" }
blackdoc = "^0.3.9"
isort = "^5.13"
codecov = { version = "^2.1" }
pytest = { version = "^8.0" }
build = { version = "^1.0" }

[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov"]

[tool.poetry.urls]
homepage = "https://app.pennsieve.io"
documentation = "https://docs.pennsieve.io/docs/uploading-files-programmatically"
repository = "https://github.com/pennsieve/pennsieve-agent-python"
changelog = "https://github.com/pennsieve/pennsieve-agent-python/CHANGELOG.md"


[tool.black]
line-length = 99
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
  | src/pennsieve/protos
)/
'''

[tool.isort]
profile = "black"
line_length = 99
skip_glob = ["src/pennsieve/protos/*"]


[build-system]
requires = [
    "poetry_core>=1.0.0",
    "setuptools",
    "protobuf",
    "grpcio",
    "tqdm",
    "requests",
    "pyjwt",
    "boto3"
]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "src/pennsieve/_version.py"
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    ".", "src",
]
